# hnet

./: .gitignore  download_weights.py  generate.py  inspect_weights.py  metrics_S_hnet_1stage_S_mhb_h4_w8_softmax_train.json  metrics_S_hnet_1stage_S_ortho_reg_0-0001_train.json  metrics_S_hnet_1stage_S_ortho_reg_0-001_train.json  metrics_baseline_700M_train.json  metrics_multiheaded_700M_train.json  metrics_multiheaded_train.json  pyproject.toml  train.py
configs/: hnet_1stage_L_d_sim.json  hnet_1stage_L_multiheaded_boundaries.json  hnet_1stage_S.json  hnet_1stage_S_random.json  hnet_1stage_XL.json  hnet_1stage_XS.json  hnet_2stage_XL.json  hnet_3stage_S.json
configs/mhb/: hnet_1stage_L_baseline.json  hnet_1stage_L_baseline.yaml  (+3 more)
eval/: lm_eval_wrapper.py  plot_results.py  run_benchmarks.py
experiments/: boundary_metrics.py  estimate_dataset_stats.py
hnet/models/: hnet.py  (+3 more)
metrics/: metrics_S_hnet_1stage_S_baseline_train.json  metrics_S_hnet_1stage_S_mhb_h4_w8_sigmoid_train.json  metrics_S_hnet_1stage_S_ortho_reg_0-01_train.json  metrics_XS_.json  metrics_XS_hnet_1stage_XS_baseline_fixed_lr.json  metrics_XS_hnet_1stage_XS_entropy_fixed_lr.json  metrics_hnet_1stage_XXS_baseline,.json  metrics_hnet_1stage_XXS_baseline.json  metrics_hnet_1stage_XXS_bm_head_cos_routing,.json  metrics_hnet_1stage_XXS_bm_head_cos_routing.json  metrics_hnet_1stage_XXS_entropy.json  metrics_multiheaded_step_10000.json
scripts/: analyze_pad_dims.py  analyze_routing.py  download_data.py  download_weights.py  inspect_weights.py  prepare_data.py  visualize_entropy.py  visualize_weights.py
(+134 files in other folders)
