[project]
name = "hnet"
version = "0.0.1"
description = "H-Net"
authors = [
    { name = "Sukjun Hwang", email = "sukjunh@cs.cmu.edu" },
    { name = "Brandon Wang", email = "brandon.wang@cartesia.ai"},
    { name = "Albert Gu", email = "agu@cs.cmu.edu" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "torch==2.9.0",
    "triton>=3.2.0",
    "mamba_ssm[causal-conv1d]",
    "flash_attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "einops",
    "optree",
    "regex",
    "omegaconf",
    "datasets",
    "lm-eval"
]
[project.urls]
Repository = "https://github.com/goombalab/hnet"

[tool.setuptools.packages.find]
where = ["."]
include = ["hnet*"]
exclude = ["tests*"]

[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"
